Fixed scrolling error on mobile and added desktop background

--- a/css/style.css
+++ b/css/style.css
@@ -11,13 +11,12 @@ body {
   background-size: cover;
   text-align: center;
   font-size: 16px;
-font-family: 'Poppins', sans-serif;
-margin: 0;
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
 
 }
 
 h1 {
-
   font-size: 2em;
 }
 
@@ -41,13 +40,13 @@ p {
 }
 
 #hero-image img{
-  width: 450px;
+  max-width: 100%;
   height: auto;
 }
 
 main {
   width: 80%;
-  padding: 10px 50px;
+  padding: 1em;
   margin: 0;
 }
 
@@ -63,6 +62,7 @@ main {
   border: none;
   box-shadow: 1px 1px 1px 1px black;
   margin: 20px 0 50px 0;
+  cursor: pointer;
 }
 
 #social {
@@ -98,6 +98,10 @@ footer {
 
 @media only screen and (min-width: 1200px) {
 
+body {
+  background-image: url("../images/bg-desktop.svg");
+}
+
 main {
   text-align: left;
 }
@@ -127,6 +131,7 @@ p {
   align-items: flex-end;
   justify-content: flex-end;
 }
+
 
 footer {
   position: absolute;
